# PersonsConsole

./: .gitignore  CMakeLists.txt  input.txt  main.cpp  personprinter.cpp  personprinter.h
